# Translate-AI

./: .eslintrc.js  .gitignore  ARCHITECTURE.md  CONTEXT.md  FIX.md  README.md  TODO.md  Think.md  app.vue  components.d.ts  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.vue  (+1 more)
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 1_initial_schema.sql
src-tauri/resources/prompts/: name.txt  nickname.txt  note.txt  profile.txt
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/application/: mod.rs
src-tauri/src/application/settings/: mod.rs  provider_service.rs
src-tauri/src/application/translation/: mod.rs
src-tauri/src/application/translation/rpgmv/: actors_service.rs  mod.rs  service.rs
src-tauri/src/commands/: actors.rs  config.rs  engine_detection.rs  mod.rs  project.rs  translation.rs
src-tauri/src/core/: game_detection.rs  mod.rs
src-tauri/src/core/rpgmv/: actors.rs  armors.rs  classes.rs  common.rs  common_events.rs  enemies.rs  items.rs  map_infos.rs  maps.rs  mod.rs  project.rs  skills.rs  states.rs  system.rs  troops.rs  weapons.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/translation/: mod.rs
src-tauri/src/domain/translation/prompt/: manager.rs
src-tauri/src/domain/translation/providers/: base.rs  ollama.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/api/: mod.rs
src-tauri/src/infrastructure/resources/: config.rs  prompt.rs
src-tauri/src/models/: mod.rs  translation.rs
src-tauri/src/models/shared/: content.rs  error.rs  mod.rs
src-tauri/src/models/translation/: language.rs  mod.rs  provider.rs
src-tauri/src/services/: mod.rs  ollama_client.rs  zip_service.rs
src-tauri/src/tests/: common_test_utils.rs  mod.rs
src-tauri/src/tests/integration/: actors_test.rs  armors_test.rs  classes_test.rs  common_events_test.rs  enemies_test.rs  items_test.rs  map_infos_test.rs  maps_test.rs  mod.rs  skills_test.rs  states_test.rs  system_test.rs  troops_test.rs  weapons_test.rs
src-tauri/src/utils/: json_utils.rs  mod.rs
(+257 files in other folders)
